header vertical alignment fix

--- a/content/themes/orangenano/css/app.css
+++ b/content/themes/orangenano/css/app.css
@@ -8237,26 +8237,34 @@ header {
   background: #333333;
 }
 /* line 8, ../sass/components/_header.scss */
+header * {
+  color: white;
+}
+/* line 12, ../sass/components/_header.scss */
 header ul {
   width: 100%;
   display: inline;
+  float: left;
+  margin: 0;
 }
-/* line 12, ../sass/components/_header.scss */
+/* line 18, ../sass/components/_header.scss */
 header ul li {
   display: inline-block;
   margin-right: 1em;
+  vertical-align: middle;
 }
-/* line 16, ../sass/components/_header.scss */
+/* line 23, ../sass/components/_header.scss */
 header ul li img {
   margin-right: 2em;
 }
-/* line 20, ../sass/components/_header.scss */
-header ul li * {
-  color: white;
-}
-/* line 24, ../sass/components/_header.scss */
-header ul li #login {
+/* line 28, ../sass/components/_header.scss */
+header ul #login {
   float: right;
+  vertical-align: middle;
+}
+/* line 32, ../sass/components/_header.scss */
+header ul #login h3 {
+  line-height: 2.5;
 }
 
 /* line 1, ../sass/components/_footer.scss */
@@ -8806,6 +8814,7 @@ img.rsImg {
 }
 /* line 13, ../sass/components/_gallery.scss */
 #gallery .royalSlider h1 {
+  width: 100%;
   position: absolute;
   top: 0;
   color: white;
