--- a/content/themes/orangenano/sass/components/_gallery.scss
+++ b/content/themes/orangenano/sass/components/_gallery.scss
@@ -11,6 +11,7 @@
 		text-align: center;
 		
 		h1{
+			width: 100%;
 			position: absolute;
 			top: 0;
 			color: $white;
